--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js 'unsafe-inline' 'unsafe-eval'" />
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
+    <title>Document</title>
+</head>
+
+<body>
+    <section>
+        <div class="main toggle">
+            <div class="head1">
+                <h1>Welcome!</h1>
+            </div>
+            <div class="head2">
+                <h2>Stay as long as you'd like.</h2>
+            </div>
+        </div>
+        <svg id="darkMode" width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="sun"
+            d="M55 27.5C55 42.6878 42.6878 55 27.5 55C12.3122 55 0 42.6878 0 27.5C0 12.3122 12.3122 0 27.5 0C42.6878 0 55 12.3122 55 27.5Z"
+            fill="#FBD301" fill-opacity="0.91" />
+        </svg>
+    </section>
+    <script src="main.js"></script>
+</body>
+
+</html>
