--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js 'unsafe-inline' 'unsafe-eval'" />
-    
+    <meta http-equiv="Content-Security-Policy"
+        content="script-src 'self' https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js 'unsafe-inline' 'unsafe-eval'" />
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
     <title>Document</title>
 </head>
@@ -15,18 +16,25 @@
 <body>
     <section>
         <div class="main toggle">
-            <div class="head1">
+            <!-- <div class="head1">
                 <h1>Welcome!</h1>
-            </div>
+            </div> -->
             <div class="head2">
-                <h2>Stay as long as you'd like.</h2>
+                <h2>stay as long as you like</h2>
             </div>
         </div>
         <svg id="darkMode" width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="sun"
-            d="M55 27.5C55 42.6878 42.6878 55 27.5 55C12.3122 55 0 42.6878 0 27.5C0 12.3122 12.3122 0 27.5 0C42.6878 0 55 12.3122 55 27.5Z"
-            fill="#FBD301" fill-opacity="0.91" />
+                d="M55 27.5C55 42.6878 42.6878 55 27.5 55C12.3122 55 0 42.6878 0 27.5C0 12.3122 12.3122 0 27.5 0C42.6878 0 55 12.3122 55 27.5Z"
+                fill="#FBD301" fill-opacity="0.91" />
         </svg>
+        <a id="star1" target="blank" href="./stars/star1.html">
+            <svg width="55" height="55" viewBox="0 0 55 55" xmlns="http://www.w3.org/2000/svg">
+                <polygon class="star" id="quarantineMeditation"
+                    points="38.26 33.74 48.72 36 38.26 38.26 36 48.72 33.74 38.26 23.28 36 33.74 33.74 36 23.28 38.26 33.74" fill="rgb(243, 236, 229)"/>
+            </svg>
+        </a>
+
     </section>
     <script src="main.js"></script>
 </body>
