--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="script-src 'self' https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js 'unsafe-inline' 'unsafe-eval'" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
-    <title>Document</title>
+    <title>ben tosto loves you</title>
 </head>
 
 <body>
